Opensource SW Final Project

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">This is a Calender</string>
-    <string name="title_meeting_activity"> Meeting</string>
-    <string name="title_edit_meeting_activity">Edit Meeting</string>
-    <string name="title_add_meeting_activity">Add Meeting</string>
-    <string name="title_main_activity">This is a Calender</string>
+    <string name="app_name">Calender Diary</string>
+    <string name="title_meeting_activity">일정</string>
+    <string name="title_edit_meeting_activity">일정 수정</string>
+    <string name="title_add_meeting_activity">일정 추가</string>
+    <string name="title_main_activity">Calender Diary</string>
     <string name="title_mass_removal_activity">Remove</string>
     <string name="title_edit">Edit</string>
     <string name="title_edit_done">Done</string>
-    <string name="title_contacts_activity">Manage Contacts</string>
+    <string name="title_contacts_activity">연락처 관리</string>
 </resources>
